[project]
name = "Red-YT-Cipher-Solver"
version = "0.1.0"
description = "A thin wrapper over yt-dlp/ejs for deciphering YT signatures. Comes with Deno out of the box."
readme = "README.md"
authors = [
    { name = "Jakub Kuczys", email = "me@jacken.men" },
    { name = "Cog Creators" },
]
license = "MIT"
license-files = ["LICEN[CS]E"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.5,<4",
    "deno>=2.7.1,<3",
    "typing-extensions~=4.15.0",
    "yarl~=1.15.2",
    "yt-dlp-ejs~=0.5.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/Jackenmen/Red-YT-Cipher-Solver"
"Documentation" = "https://github.com/Jackenmen/Red-YT-Cipher-Solver/blob/main/README.md"
"Issue Tracker" = "https://github.com/Jackenmen/Red-YT-Cipher-Solver/blob/main/README.md/issues"
"Source Code" = "https://github.com/Jackenmen/Red-YT-Cipher-Solver/blob/main/README.md"

[project.scripts]
red-yt-cipher-solver = "red_yt_cipher_solver.__main__:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 99

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pyflakes rules
    "F",
    # pycodestyle rules
    "E",
    "W",
    # import sorting
    "I",
    # pyupgrade rules
    "UP",
    # flake8-bugbear rules
    "B",
    # flake8-bandit rules
    "S",
    # builtin shadowing rules
    "A",
    # unused arguments
    "ARG",
    # refurb rules
    "FURB",
    "FURB148",  # unnecessary-enumerate (in preview)
    # flake8-simplify rules
    "SIM",
    # flake8-logging rules
    "LOG",
    # flake8-logging-format rules
    "G",
    # flake8-comprehensions rules
    "C4",
    # "boolean trap" rules
    "FBT",
    # disallow implicitly concatenated strings on a single line
    # and explicitly concatenated strings
    "ISC",
    # perflint rules
    "PERF",
    # pygrep-hooks rules
    "PGH",
    # flake8-pie rules
    "PIE",
    # flake8-return rules
    "RET",
    # collection of rules unique to Ruff
    "RUF",
    # leftover `breakpoint()`
    "T100",
    # flake8-tidy-imports rules
    "TID",
]
ignore = [
    # setattr is needed to make type checkers happy when creating new attributes on objects
    "B010",
    # disable __all__ sorting
    # see https://github.com/astral-sh/ruff/issues/20952
    "RUF022",
    # `assert` is expected to be used in code (to appease type checkers)
    "S101",
    # the idea of checking untrusted input is not a bad one but this is prone to false positives
    "S603",
    # `contextlib.suppress()` is slower than `try-except-pass`
    "SIM105",
]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["logging.captureWarnings"]
